Fix gapping in gallery tiles

--- a/_sass/_includes/_gallery.scss
+++ b/_sass/_includes/_gallery.scss
@@ -35,7 +35,8 @@
 
 	img {
 		width: 100%;
-		margin: 1px;
+		padding-right: 10px;
+		padding-bottom: 10px;
 	}
 }
 
